kubernetes/aplus-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: aplus-app
  labels:
    app: aplus
spec:
  # Note: this is the default type = ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
  selector:     # Should be a Pod selector
    app: aplus
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aplus-app-deployment
  labels:
    app: aplus
spec:
  replicas: 1
  selector:       # Should match .spec.template
    matchLabels:
      app: aplus
      tier: frontend
  strategy:
    type: Recreate  # here RollingUpdate is not well handled by app sql queries
  template:
    metadata:
      labels:
        app: aplus
        tier: frontend
    spec:
      containers:
      - image: betagouv/aplus:0.16.1
        name: aplus-app
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: aplus-files-pv
          mountPath: /app/files
      volumes:
      - name: aplus-files-pv
        persistentVolumeClaim:
          claimName: aplus-files-pvc
