kubernetes/aplus-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: aplus-db
  labels:
    app: aplus
spec:
  clusterIP: None
  ports:
  - port: 5432
  selector:
    app: aplus
    tier: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: aplus-db-statefulset
  labels:
    app: aplus
spec:
  selector:
    matchLabels:
      app: aplus
      tier: postgres
  serviceName: aplus-db
  replicas: 1
  template:
    metadata:
      labels:
        app: aplus
        tier: postgres
    spec:
      containers:
        - name: postgres-database
          image: postgres:11
          volumeMounts:
            - name: aplus-db-pv
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: aplus-db-pv
          persistentVolumeClaim:
            claimName: aplus-db-pvc
